class AnimationEnum{
    public static string DEAD = "dead";
    public static string IDLE = "idle";
    public static string RUN = "run";
    public static string ATTACK = "attack";
    public static string JUMP = "jump";
    public static string SLIDE = "slide";
    public static string CLIMB = "climb";
    public static string THROW = "throw";
    public static string JUMP_ATT = "jump_att";
}